[package]
name = "librakaly"
version = "0.11.19"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2018"
repository = "https://github.com/rakaly/librakaly.git"
description = "A C wrapper around rakaly functionality"
readme = "README.md"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
name = "rakaly"

[dependencies]
libc = "0.2"
eu4save = { git = "https://github.com/rakaly/eu4save.git", default-features = false }
imperator-save = { git = "https://github.com/rakaly/imperator-save.git" }
ck3save = { git = "https://github.com/rakaly/ck3save.git" }
hoi4save = { git = "https://github.com/rakaly/hoi4save.git" }
vic3save = { git = "https://github.com/pdx-tools/pdx-tools" }
thiserror = "2.0"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
strip = true
