[package]
name = "librakaly"
version = "0.12.2"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2018"
repository = "https://github.com/rakaly/librakaly.git"
description = "A C wrapper around rakaly functionality"
readme = "README.md"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
name = "rakaly"

[dependencies]
ck3save = { git = "https://github.com/rakaly/ck3save.git" }
eu4save = { git = "https://github.com/rakaly/eu4save.git", default-features = false }
eu5save = { git = "https://github.com/pdx-tools/pdx-tools" }
hoi4save = { git = "https://github.com/rakaly/hoi4save.git" }
imperator-save = { git = "https://github.com/rakaly/imperator-save.git" }
vic3save = { git = "https://github.com/pdx-tools/pdx-tools" }
jomini = { version = "0.32", features = ["envelope", "json"] }
libc = "0.2"
thiserror = "2.0"

[build-dependencies]
cbindgen = "0.29"

[profile.release]
strip = true
